Apply Docs template to Label Propagation